Retain bidirectional marks when eliding text

When the text contains unicode markers for bidirectional
text, these will not affect the width of the text, but they
might affects its layout. Thus, we need to retain these
markers in the elided text to avoid the layout of the string
changing when its allocated width changes.

Task-number: QTBUG-3768
Change-Id: I3866c32cd1dcd5fff2b8fa5b25ae89e551531a97
Reviewed-by: Jiang Jiang <jiang.jiang@nokia.com>

cregit: ca5918c8b8e0d4388b574cb019e6b770e7342884 https://github.com/qt/qtbase/commit/ca5918c8b8e0d4388b574cb019e6b770e7342884